--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,14 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macOS-latest, windows-latest]
+        nim: [stable, 1.6.18]
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: true
     - uses: iffy/install-nim@v4
+      with:
+        version: ${{ matrix.nim }}
     - name: Build
       run: nimble install -y
     - name: Test
